--- a/paginas/home.html
+++ b/paginas/home.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>EcoMarket - Produtos ecológicos e sustentáveis</title>
-    <meta name="description" content="EcoMarket - marketplace local de produtos ecológicos, sustentáveis e regionais. Conectando consumidores conscientes a pequenos produtores." />
-    <meta name="keywords" content="marketplace, produtos ecológicos, sustentáveis, comércio local, EcoMarket, Santa Maria da Vitória" />
+    <meta name="description"
+        content="EcoMarket - marketplace local de produtos ecológicos, sustentáveis e regionais. Conectando consumidores conscientes a pequenos produtores." />
+    <meta name="keywords"
+        content="marketplace, produtos ecológicos, sustentáveis, comércio local, EcoMarket, Santa Maria da Vitória" />
     <meta name="author" content="Victor Manoel e equipe do projeto EcoMarket Samavi" />
     <meta name="robots" content="index, follow" />
 
@@ -27,6 +30,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <link rel="stylesheet" href="../assets/estilo/home.css" />
 </head>
+
 <body>
     <script>
         // Proteção de Rota (deve ser o PRIMEIRO script da página)
@@ -79,12 +83,10 @@
             <!-- HERO BANNER -->
             <section class="linha">
                 <div class="col-2">
-                    <h1>Escolha um novo <br> estilo de vida!</h1>
-                    <p>Quem ama preserva, preservar o meio <br> ambiente é preservar a vida</p> <br>
-                    <a href="../paginas/informacoes.html" class="btn">Mais Informações &#8594;</a>
+
                 </div>
                 <div class="col-2">
-                    <img src="../assets/img/a.png" alt="Estilo de vida sustentável">
+                    <img src="../assets/img/teste.png" alt="Estilo de vida sustentável">
                 </div>
             </section>
         </div>
@@ -121,15 +123,21 @@
         </section>
     </main>
 
-    <!-- OFERTAS (SEÇÃO VAZIA PARA FUTURO DESENVOLVIMENTO) -->
-    <section class="ofertas">
+    <!-- RODAPÉ -->
+    <footer class="rodape">
         <div class="corpo-categorias">
             <div class="linha">
-                <div class="col-2"></div>
-                <div class="col-2"></div>
+                <div class="col-2">
+                    <h1>Escolha um novo <br> estilo de vida!</h1>
+                    <p>Quem ama preserva, preservar o meio <br> ambiente é preservar a vida</p> <br>
+                    <a href="../paginas/informacoes.html" class="btn">Mais Informações &#8594;</a>
+                </div>
+                <div class="col-2">
+                    <img src="../assets/img/a.png" alt="">
+                </div>
             </div>
         </div>
-    </section>
+    </footer>
 
     <!-- SCRIPTS -->
     <script>
@@ -148,4 +156,5 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
+
 </html>
