--- a/paginas/home.html
+++ b/paginas/home.html
@@ -83,10 +83,7 @@
             <!-- HERO BANNER -->
             <section class="linha">
                 <div class="col-2">
-
-                </div>
-                <div class="col-2">
-                    <img src="../assets/img/teste.png" alt="Estilo de vida sustentável">
+                    <img src="../assets/img/banner1.png" alt="Estilo de vida sustentável">
                 </div>
             </section>
         </div>
@@ -133,7 +130,7 @@
                     <a href="../paginas/informacoes.html" class="btn">Mais Informações &#8594;</a>
                 </div>
                 <div class="col-2">
-                    <img src="../assets/img/a.png" alt="">
+                    <img src="../assets/img/lixeiras.png" alt="">
                 </div>
             </div>
         </div>
