--- a/paginas/informacoes.html
+++ b/paginas/informacoes.html
@@ -16,7 +16,7 @@
   <meta name="twitter:image" content="https://ecomarket-samavi.vercel.app/assets/img/lata.jpg" />
 
   <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="../assets/css/informacoes.css" />
+  <link rel="stylesheet" href="../assets/estilo/informacoes.css" />
   <title>EcoMarket - Informações</title>
 </head>
 <body>
