--- a/paginas/home.html
+++ b/paginas/home.html
@@ -82,8 +82,11 @@
 
             <!-- HERO BANNER -->
             <section class="linha">
-                <div class="col-2">
-                    <img src="../assets/img/banner1.png" alt="Estilo de vida sustentável">
+                <div class="col-2-banner">
+                    <picture>
+                        <source media="(max-width: 780px)" srcset="../assets/img/banner-mobile1.png">
+                        <img src="../assets/img/banner-home.png" alt="Estilo de vida sustentável">
+                    </picture>
                 </div>
             </section>
         </div>
