funções do carrinho, pedido e notificação no email

--- a/paginas/conta.html
+++ b/paginas/conta.html
@@ -90,6 +90,7 @@
         <input id="enviar" type="submit" value="Atualizar Perfil">
         <button type="button" id="btn-logout">Sair</button>
         <button type="button" id="btn-excluir-conta">Excluir Conta</button>
+        <a href="../paginas/pedidos.html"><button type="button" class="pedidos">Meus Pedidos</button></a>
       </div>
     </form>
 
