--- a/paginas/home.html
+++ b/paginas/home.html
@@ -56,7 +56,7 @@
                     <ul>
                         <li><p id="saudacao"></p></li>
                         <li><a href="../paginas/produtos.html">Produtos</a></li>
-                        <li><a href="../paginas/contatos.html">Contatos</a></li>
+                        <li><a href="../paginas/contatos.html">Fale Conosco</a></li>
                         <li><a href="../paginas/conta.html">Minha Conta</a></li>
                     </ul>
                 </nav>
