--- a/paginas/finalizar-compra.html
+++ b/paginas/finalizar-compra.html
@@ -13,7 +13,7 @@
   <div class="container">
     <div class="topo-pagina">
       <h1>Resumo do Pedido</h1>
-      <!-- Navegação -->
+      <!-- NAVEGAÇÃO -->
         <nav class="botoes-navegacao" aria-label="Navegação da página">
           <a href="../paginas/home.html" class="btn-home" aria-label="Página inicial">
             <ion-icon name="home-outline"></ion-icon>
@@ -29,6 +29,7 @@
     <div id="resumo-carrinho"></div>
 
   </div>
+  <!-- MODAL(MENU) DE CONFIRMAÇÃO -->
   <div id="modal-confirmar-pedido" class="modal">
   <div class="modal-content">
     <h2>Confirmação de Pedido</h2>
@@ -41,6 +42,7 @@
     <p id="erro-senha"></p>
   </div>
   </div>
+  <!-- SCRIPTS -->
   <script>
     function formatarTelefone(telefone) {
       // Remove tudo que não é dígito
