--- a/paginas/home.html
+++ b/paginas/home.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -30,7 +29,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <link rel="stylesheet" href="../assets/estilo/home.css" />
 </head>
-
 <body>
     <script>
         // Proteção de Rota (deve ser o PRIMEIRO script da página)
@@ -76,7 +74,7 @@
                 </div>
             </nav>
 
-            <!-- HERO BANNER -->
+            <!-- BANNER -->
             <section class="linha">
                 <div class="col-2-banner">
                     <picture>
@@ -171,5 +169,4 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
-
 </html>
