--- a/paginas/pedidos.html
+++ b/paginas/pedidos.html
@@ -15,11 +15,12 @@
   </header>
 
   <main>
+  <!-- OS PEDIDOS APARECEM AQUI -->
     <section id="lista-pedidos">
       <p>Carregando seus pedidos...</p>
     </section>
   </main>
-  <!-- Modal de Cancelamento -->
+  <!-- MODAL(MENU) DE CANCELAMENTO -->
   <div id="cancelModal" class="modal" style="display: none;">
     <div class="modal-content">
       <h3>Justificar Cancelamento</h3>
