--- a/paginas/produtos.html
+++ b/paginas/produtos.html
@@ -24,7 +24,7 @@
         window.location.href = '/index.html?redirect=' + encodeURIComponent(window.location.pathname);
       }
     </script>
-
+    <!-- NOTIFICAÇÃO DE FEEDBACK -->
     <div id="feedback" class="feedback" aria-live="polite"></div>
 
     <header>
@@ -32,7 +32,7 @@
         <h1>EcoMarket SAMAVI</h1>
         <img src="../assets/img/logo.png" alt="Logo EcoMarket" />
       </div>
-
+      <!-- NAVEGAÇÃO -->
       <div class="header-controls">
         <ul>
           <li>
@@ -46,7 +46,7 @@
             </a>
           </li>
         </ul>
-
+        <!-- CARRINHO -->
         <div class="carrinho-icone" title="Carrinho de Compras">
           <img src="../assets/img/carrinho.png" alt="Carrinho de Compras" width="30" height="30" />
           <span id="contador-carrinho">0</span>
@@ -64,7 +64,7 @@
 
     <main class="produtos-page">
       <h1 id="subtitulo">Todos os Produtos</h1>
-
+      <!-- BARRA DE PESQUISA E FILTRAGEM -->
       <div class="filtros-container">
         <div class="barra-pesquisa">
           <input type="text" id="input-pesquisa" placeholder="Buscar produtos..." aria-label="Buscar produtos" />
@@ -82,10 +82,10 @@
           </select>
         </div>
       </div>
-
+      <!-- OS PRODUTOS APARECERAM AQUI -->
       <div class="produtos-grid" id="produtos-lista"></div>
     </main>
-
+    <!-- SCRIPTS -->
     <script type="module" src="../assets/js/modules/config.js"></script>
     <script type="module" src="../assets/js/main.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
