--- a/paginas/registro.html
+++ b/paginas/registro.html
@@ -8,20 +8,17 @@
   <meta name="keywords" content="cadastro, EcoMarket, produtos locais, Santa Maria da Vitória, sustentabilidade">
   <meta name="author" content="Victor Manoel e equipe do projeto EcoMarket Samavi">
   <meta name="robots" content="index, follow">
-
   <!-- Open Graph -->
   <meta property="og:title" content="Cadastro - EcoMarket Samavi">
   <meta property="og:description" content="Participe do EcoMarket e apoie pequenos produtores da sua região.">
   <meta property="og:image" content="https://ecomarket-samavi.vercel.app/assets/img/banner.png">
   <meta property="og:url" content="https://ecomarket-samavi.vercel.app">
   <meta property="og:type" content="website">
-
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="EcoMarket Samavi - Cadastro">
   <meta name="twitter:description" content="Faça parte do marketplace que conecta você aos produtores locais.">
   <meta name="twitter:image" content="https://ecomarket-samavi.vercel.app/assets/img/banner.png">
-
   <!-- Ícone e fontes -->
   <link rel="stylesheet" href="../assets/estilo/cadastro.css">
   <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
@@ -93,7 +90,7 @@
     </section>
   </main>
 
-  <!-- Scripts -->
+  <!-- SCRIPTS -->
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   <script type="module" src="../assets/js/modules/feedback.js"></script>
