--- a/paginas/add-produto.html
+++ b/paginas/add-produto.html
@@ -10,15 +10,15 @@
 </head>
 <body>
   <div class="container">
-    <!-- Área de feedback para acessibilidade -->
+    <!-- NOTIFICAÇÃO DE FEEDBACK -->
     <div id="feedback" class="feedback" aria-live="polite" role="alert" tabindex="0"></div>
 
     <h1>Adicionar <br />Novo Produto</h1>
-
+    <!-- NAVEGAÇÃO -->
     <a href="../paginas/produtos.html" class="btn-voltar" title="Voltar à página de produtos" aria-label="Voltar à página de produtos">
       <ion-icon name="storefront-outline" aria-hidden="true"></ion-icon>
     </a>
-
+    <!-- FORMULÁRIO DE CADASTRO -->
     <form id="form-produto" novalidate>
       <div class="form-group">
         <label for="nome">Nome do Produto:</label>
@@ -58,12 +58,10 @@
       <button type="submit" aria-label="Cadastrar produto">Cadastrar Produto</button>
     </form>
   </div>
-
-  <!-- Ícones Ionicons -->
+  <!-- ÍCONE IONICONS -->
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-
-  <!-- Script principal -->
+  <!-- SCRIPT PRINCIPAL -->
   <script type="module">
     import { cadastrarProduto } from '../assets/js/modules/produtos.js';
     import { mostrarFeedback } from '../assets/js/modules/feedback.js';
