--- a/paginas/contatos.html
+++ b/paginas/contatos.html
@@ -10,8 +10,9 @@
   <link rel="stylesheet" href="../assets/estilo/contatos.css" />
   <title>EcoMarket - Contatos</title>
 </head>
-
 <body>
+  <!-- NOTIFICAÇÃO DE FEEDBACK -->
+  <div id="feedback" class="feedback" aria-live="polite"></div>
   <header>
     <a href="../paginas/home.html" title="Voltar para Home">
       <ion-icon name="home-outline"></ion-icon>
@@ -42,7 +43,8 @@
 
     <div id="mensagem-enviada"></div>
   </main>
-
+  <!-- SCRIPTS -->
+  <script type="module" src="../assets/js/modules/feedback.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   <script>
@@ -65,10 +67,10 @@
           document.getElementById('mensagem-enviada').textContent = resultado.message;
           this.reset();
         } else {
-          alert(resultado.error || 'Erro ao enviar feedback');
+          mostrarFeedback('Erro ao enviar feedback','erro');
         }
       } catch (err) {
-        alert('Erro de conexão');
+        mostrarFeedback('Erro de conexão','erro');
       }
     });
   </script>
