--- a/paginas/informacoes.html
+++ b/paginas/informacoes.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+  <!-- META DADOS -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Aprenda o significado das cores das lixeiras recicláveis e como praticar a reciclagem em casa com o EcoMarket." />
@@ -14,7 +15,7 @@
   <meta name="twitter:title" content="EcoMarket - Informações sobre Reciclagem" />
   <meta name="twitter:description" content="Descubra o significado das cores das lixeiras recicláveis e como adotar práticas sustentáveis em casa." />
   <meta name="twitter:image" content="https://ecomarket-samavi.vercel.app/assets/img/lata.jpg" />
-
+  <!-- LINKS CSS E ICON -->
   <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="../assets/estilo/informacoes.css" />
   <title>EcoMarket - Informações</title>
@@ -191,6 +192,7 @@
             Outro ponto a ser considerado é a conscientização de todos os membros da família sobre a importância da reciclagem. Crianças e adultos podem participar ativamente desse processo, transformando a reciclagem em um hábito saudável e necessário para o bem-estar do planeta.
         </p>        
     </main>
+    <!-- SCRIPTS -->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
