Remover .env do repositório para evitar exposição
e alterado o nome estilo para css em arquivos .html

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
   <!-- Favicon e Estilos -->
   <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="../assets/estilo/login.css">
-  <link rel="stylesheet" href="../assets/estilo/media-query.css">
+  <link rel="stylesheet" href="./assets/css/login.css">
+  <link rel="stylesheet" href="./assets/css/media-query.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
