--- a/paginas/add-produto.html
+++ b/paginas/add-produto.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>EcoMarket - Adicionar Produto</title>
   <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="../assets/estilo/addprod.css" />
+  <link rel="stylesheet" href="../assets/css/addprod.css" />
 </head>
 <body>
   <div class="container">
