--- a/paginas/conta.html
+++ b/paginas/conta.html
@@ -22,7 +22,7 @@
   <meta name="twitter:image" content="https://ecomarket-samavi.vercel.app.com/assets/img/logo-300.png" />
   <!-- Ícone e CSS -->
   <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="../assets/estilo/perfil.css" />
+  <link rel="stylesheet" href="../assets/css/perfil.css" />
 </head>
 <body>
   <!-- NOTIFICAÇÃO DE FEEDBACK -->
