--- a/paginas/contatos.html
+++ b/paginas/contatos.html
@@ -7,7 +7,7 @@
   <meta name="author" content="EcoMarket Samavi">
   <meta name="keywords" content="contato, EcoMarket, Samavi, feedback, ecomercado, ecológico, sustentável">
   <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="../assets/estilo/contatos.css" />
+  <link rel="stylesheet" href="../assets/css/contatos.css" />
   <title>EcoMarket - Contatos</title>
 </head>
 <body>
