--- a/paginas/produtos.html
+++ b/paginas/produtos.html
@@ -6,7 +6,7 @@
     <title>EcoMarket - Produtos</title>
     <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="../assets/estilo/produtos.css">
+    <link rel="stylesheet" href="../assets/css/produtos.css">
     <!-- Metadados para SEO e acessibilidade -->
     <meta name="description" content="Confira todos os produtos disponíveis no EcoMarket SAMAVI, um marketplace sustentável para produtores locais.">
     <meta name="author" content="Equipe EcoMarket SAMAVI">
