--- a/paginas/registro.html
+++ b/paginas/registro.html
@@ -20,7 +20,7 @@
   <meta name="twitter:description" content="Faça parte do marketplace que conecta você aos produtores locais.">
   <meta name="twitter:image" content="https://ecomarket-samavi.vercel.app/assets/img/banner.png">
   <!-- Ícone e fontes -->
-  <link rel="stylesheet" href="../assets/estilo/cadastro.css">
+  <link rel="stylesheet" href="../assets/css/registro.css">
   <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
 </head>
