--- a/paginas/finalizar-compra.html
+++ b/paginas/finalizar-compra.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="stylesheet" href="../assets/estilo/finalizar.css">
+  <link rel="stylesheet" href="../assets/css/finalizar.css">
   <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   <title>Finalizar Compra - EcoMarket</title>
