--- a/paginas/home.html
+++ b/paginas/home.html
@@ -27,7 +27,7 @@
 
     <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
-    <link rel="stylesheet" href="../assets/estilo/home.css" />
+    <link rel="stylesheet" href="../assets/css/home.css" />
 </head>
 <body>
     <script>
