--- a/paginas/pedidos.html
+++ b/paginas/pedidos.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Meus Pedidos - EcoMarket Samavi</title>
-  <link rel="stylesheet" href="../assets/estilo/pedidos.css" />
+  <link rel="stylesheet" href="../assets/css/pedidos.css" />
   <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
 </head>
 <body>
