acrescentando o carrinho na pagina conta e pedidos

--- a/index.html
+++ b/index.html
@@ -4,27 +4,23 @@
   <!-- Codificação e responsividade -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <!-- Título e SEO -->
   <title>Login - EcoMarket Samavi</title>
   <meta name="description" content="Faça login para acessar sua conta no EcoMarket Samavi, o marketplace local de produtos sustentáveis de Santa Maria da Vitória.">
   <meta name="keywords" content="login, EcoMarket, Santa Maria da Vitória, produtos sustentáveis, pequenos produtores">
   <meta name="author" content="Victor Manoel e equipe do projeto EcoMarket Samavi">
   <meta name="robots" content="noindex, nofollow"> <!-- Página de login não deve ser indexada -->
-
   <!-- Open Graph para redes sociais -->
   <meta property="og:title" content="Login - EcoMarket Samavi">
   <meta property="og:description" content="Acesse sua conta para comprar produtos locais sustentáveis.">
   <meta property="og:image" content="https://ecomarket-samavi.vercel.app/assets/img/banner.png">
   <meta property="og:url" content="https://ecomarket-samavi.vercel.app">
   <meta property="og:type" content="website">
-
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Login - EcoMarket Samavi">
   <meta name="twitter:description" content="Acesse sua conta no EcoMarket Samavi e apoie produtores locais.">
   <meta name="twitter:image" content="https://ecomarket-samavi.vercel.app/assets/img/banner.png">
-
   <!-- Favicon e Estilos -->
   <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="./assets/css/login.css">
@@ -62,8 +58,7 @@
       </div>
     </section>
   </main>
-
-  <!-- Scripts -->
+  <!-- SCRIPTS -->
   <script type="module" src="./assets/js/modules/feedback.js"></script>
   <script src="./assets/js/auth.js" defer></script>
 </body>
