--- a/paginas/produtos.html
+++ b/paginas/produtos.html
@@ -13,7 +13,7 @@
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="EcoMarket - Produtos">
     <meta property="og:description" content="Navegue por produtos sustentáveis de produtores locais de Santa Maria da Vitória.">
-    <meta property="og:image" content="https://ecomarket-samavi.vercel.app.com">
+    <meta property="og:image" content="https://ecomarket-samavi.vercel.app">
     <meta property="og:type" content="website">
 </head>
 <body>
