--- a/paginas/registro.html
+++ b/paginas/registro.html
@@ -83,7 +83,7 @@
         </p>
 
         <p id="botoes-container">
-          <input id="enviar" type="submit" value="Enviar" aria-label="Enviar formulário de cadastro">
+          <input id="enviar" type="submit" value="Registrar" aria-label="Enviar formulário de cadastro">
           <input id="limpar" type="reset" value="Limpar" aria-label="Limpar dados preenchidos">
         </p>
       </form>
