--- a/paginas/conta.html
+++ b/paginas/conta.html
@@ -22,7 +22,7 @@
   <meta name="twitter:image" content="https://ecomarket-samavi.vercel.app.com/assets/img/logo-300.png" />
   <!-- Ícone e CSS -->
   <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="../assets/css/perfil.css" />
+  <link rel="stylesheet" href="../assets/css/conta.css" />
 </head>
 <body>
   <!-- NOTIFICAÇÃO DE FEEDBACK -->
@@ -30,11 +30,27 @@
   <header>
     <h1>Perfil</h1>
     <h2 id="saudacao"></h2>
-    <img src="../assets/img/logo-300.png" alt="Logo EcoMarket" />
+    <img class="logo" src="../assets/img/logo-300.png" alt="Logo EcoMarket" />
     <!-- NAVEGAÇÃO -->
     <ul>
       <li><a href="../paginas/home.html"><ion-icon name="home-outline"></ion-icon></a></li>
+      <li>
+      <!-- CARRINHO DE COMPRAS -->
+        <div class="carrinho-icone">
+            <img src="../assets/img/carrinho.png" alt="Carrinho de Compras" width="30" height="30">
+            <span id="contador-carrinho">0</span>
+            <div class="carrinho-dropdown" id="carrinho-dropdown">
+                <div id="lista-carrinho"></div>
+                <div class="carrinho-total" id="total-carrinho">Total: R$ 0,00</div>
+                <div class="carrinho-botoes">
+                    <button class="btn-limpar">Limpar Carrinho</button>
+                    <button id="finalizar-compra" class="btn-finalizar">Finalizar Compra</button>
+                </div>
+            </div>
+        </div>
+      </li>
     </ul>
+    
   </header>
   <main>
     <div class="profile-pic">
@@ -113,6 +129,8 @@
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   <script type="module" src="../assets/js/modules/feedback.js"></script>
+  <script type="module" src="../assets/js/modules/config.js"></script>
+  <script type="module" src="../assets/js/main.js"></script>
   <script>
     const usuarioLogado = JSON.parse(localStorage.getItem('usuarioLogado'));
 
