--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
   <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="./assets/css/login.css">
   <link rel="stylesheet" href="./assets/css/media-query.css">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&display=swap&icons=mail,autorenew">
 </head>
 <body>
   <div id="feedback" role="alert" aria-live="assertive"></div>
@@ -48,6 +49,7 @@
             <span class="material-icons" aria-hidden="true">vpn_key</span>
             <input type="password" name="senha" id="isenha" placeholder="sua senha" autocomplete="current-password" required minlength="8" aria-label="Senha">
             <label for="isenha" class="visually-hidden">Senha</label>
+            <a href="#" id="link-esqueci-senha">🔐 Esqueceu sua senha?</a>
           </div>
 
           <input type="submit" value="Entrar" id="btn-login" aria-label="Entrar na conta">
@@ -55,11 +57,183 @@
             <span class="material-icons" aria-hidden="true">mail</span>
           </a>
         </form>
+        <!-- Modal Esqueci Senha -->
+        <div id="modal-esqueci-senha" class="modal" aria-hidden="true">
+          <div class="modal-content" role="dialog" aria-labelledby="modal-title" aria-describedby="modal-desc">
+            <span class="close-modal" id="fechar-esqueci-senha" aria-label="Fechar">&times;</span>
+            <h2 id="modal-title">Redefinir senha</h2>
+            <p id="modal-desc" class="desc">Digite seu e-mail para receber o link de redefinição.</p>
+            <form id="form-esqueci-senha">
+              <div class="campo">
+                <span class="material-icons" aria-hidden="true">mail</span>
+                <input type="email" name="email" id="email-esqueci" placeholder="seu e-mail" required>
+              </div>
+              <button type="submit" class="botao-enviar">Enviar link</button>
+            </form>
+          </div>
+        </div>
+        <!-- Modal Redefinir Senha -->
+        <div id="modal-redefinir-senha" class="modal" aria-hidden="true">
+          <div class="modal-content" role="dialog" aria-labelledby="modal-redefinir-title" aria-describedby="modal-redefinir-desc">
+            <span class="close-modal" id="fechar-redefinir-senha" aria-label="Fechar">&times;</span>
+            <h2 id="modal-redefinir-title">Redefinir senha</h2>
+            <p id="modal-redefinir-desc" class="desc">Cole o token que recebeu no e-mail e defina sua nova senha.</p>
+            <form id="form-redefinir-senha">
+              <div class="campo">
+                <span class="material-symbols-outlined">mail_lock</span>
+                <input type="text" name="token" id="input-token" placeholder="Token" required>
+              </div>
+              <div class="campo">
+                <span class="material-icons" aria-hidden="true">vpn_key</span>
+                <input type="password" name="senha" id="nova-senha" placeholder="Nova senha" required minlength="8">
+              </div>
+              <div class="campo">
+                <span class="material-symbols-outlined">autorenew</span>
+                <input type="password" name="confirmarSenha" id="confirma-nova-senha" placeholder="Confirme a nova senha" required minlength="8">
+              </div>
+              <button type="submit" class="botao-enviar">Redefinir senha</button>
+            </form>
+          </div>
+        </div>
       </div>
     </section>
   </main>
   <!-- SCRIPTS -->
   <script type="module" src="./assets/js/modules/feedback.js"></script>
   <script src="./assets/js/auth.js" defer></script>
+  <script>
+    const modalEsqueci = document.getElementById('modal-esqueci-senha');
+    const abrirModal = document.getElementById('link-esqueci-senha');
+    const fecharModal = document.getElementById('fechar-esqueci-senha');
+    const formEsqueci = document.getElementById('form-esqueci-senha');
+
+    abrirModal.addEventListener('click', (e) => {
+      e.preventDefault();
+      modalEsqueci.classList.add('active');
+      modalEsqueci.setAttribute('aria-hidden', 'false');
+    });
+
+    fecharModal.addEventListener('click', () => {
+      modalEsqueci.classList.remove('active');
+      modalEsqueci.setAttribute('aria-hidden', 'true');
+    });
+
+    modalEsqueci.addEventListener('click', (e) => {
+      if (e.target === modalEsqueci) {
+        modalEsqueci.classList.remove('active');
+        modalEsqueci.setAttribute('aria-hidden', 'true');
+      }
+    });
+
+    formEsqueci.addEventListener('submit', async (e) => {
+    e.preventDefault();
+    const email = document.getElementById('email-esqueci').value;
+
+    try {
+      const res = await fetch('/api/perfil/esqueci-senha', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ email }),
+      });
+
+      const data = await res.json();
+
+      if (res.ok) {
+        mostrarFeedback(data.message || `Se o e-mail ${email} estiver cadastrado, enviaremos um link de redefinição.`, 'sucesso', 8000);
+      } else {
+        mostrarFeedback(data.message || 'Erro ao enviar e-mail.', 'erro', 8000);
+      }
+
+    } catch (error) {
+      mostrarFeedback('Erro na requisição. Tente novamente.', 'erro', 8000);
+    }
+
+    setTimeout(() => {
+      modalEsqueci.classList.remove('active');
+      formEsqueci.reset();
+    }, 8000);
+    });
+
+    const modalRedefinir = document.getElementById('modal-redefinir-senha');
+    const fecharRedefinir = document.getElementById('fechar-redefinir-senha');
+    const formRedefinir = document.getElementById('form-redefinir-senha');
+
+    // Função para abrir o modal Redefinir Senha (você pode chamar quando quiser)
+    function abrirModalRedefinir() {
+      modalRedefinir.classList.add('active');
+      modalRedefinir.setAttribute('aria-hidden', 'false');
+    }
+
+    // Fecha modal ao clicar no X
+    fecharRedefinir.addEventListener('click', () => {
+      modalRedefinir.classList.remove('active');
+      modalRedefinir.setAttribute('aria-hidden', 'true');
+      formRedefinir.reset();
+    });
+
+    // Fecha modal ao clicar fora do conteúdo
+    modalRedefinir.addEventListener('click', (e) => {
+      if (e.target === modalRedefinir) {
+        modalRedefinir.classList.remove('active');
+        modalRedefinir.setAttribute('aria-hidden', 'true');
+        formRedefinir.reset();
+      }
+    });
+
+    // Envio do formulário para resetar senha
+    formRedefinir.addEventListener('submit', async (e) => {
+      e.preventDefault();
+
+      const token = document.getElementById('input-token').value.trim();
+      const senha = document.getElementById('nova-senha').value;
+      const confirmarSenha = document.getElementById('confirma-nova-senha').value;
+
+      if (senha !== confirmarSenha) {
+        mostrarFeedback('As senhas não conferem.', 'erro');
+        return;
+      }
+
+      try {
+        const res = await fetch(`/api/perfil/resetar-senha?token=${encodeURIComponent(token)}`, {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ senha, confirmarSenha }),
+        });
+        const data = await res.json();
+
+        if (res.ok) {
+          mostrarFeedback(data.message || 'Senha redefinida com sucesso.', 'sucesso');
+          setTimeout(() => {
+            modalRedefinir.classList.remove('active');
+            formRedefinir.reset();
+          }, 4000);
+        } else {
+          mostrarFeedback(data.message || 'Erro ao redefinir senha.', 'erro');
+        }
+      } catch {
+        mostrarFeedback('Erro na requisição. Tente novamente.', 'erro');
+      }
+    });
+
+    window.addEventListener('DOMContentLoaded', () => {
+    const urlParams = new URLSearchParams(window.location.search);
+    const token = urlParams.get('token');
+
+    if (token) {
+      // Abre o modal de redefinir senha
+      const modalRedefinir = document.getElementById('modal-redefinir-senha');
+      const inputToken = document.getElementById('input-token');
+
+      modalRedefinir.classList.add('active');
+      modalRedefinir.setAttribute('aria-hidden', 'false');
+
+      // Preenche o input token
+      inputToken.value = token;
+
+      // Opcional: remover token da URL para segurança / limpeza
+      history.replaceState(null, '', window.location.pathname);
+    }
+  });
+  </script>
 </body>
 </html>
